--- a/src/pages/skils/[tag].astro
+++ b/src/pages/skils/[tag].astro
@@ -36,10 +36,10 @@ const tagPosts = getPostsByTag(posts, tag);
 ---
 
 <Layout title={`Tag:${tag} | ${SITE.title}`}>
-  <Header activeNav="tags" />
+  <Header activeNav="skils" />
   <Main
     pageTitle={`Tag:${tag}`}
-    pageDesc={`All the articles with the tag "${tag}".`}
+    pageDesc={`All the articles with the skil "${tag}".`}
   >
     <ul>
       {
