--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Card from "@components/Card";
 import Socials from "@components/Socials.astro";
 import getSortedPosts from "@utils/getSortedPosts";
 import slugify from "@utils/slugify";
+import Hero from "@components/Hero.astro";
 import { SOCIALS } from "@config";
 
 const posts = await getCollection("blog");
@@ -20,60 +21,30 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 ---
 
 <Layout>
+  {
+    // only display if at least one social link is enabled
+    socialCount > 0 && (
+    <div  class="absolute top-0 left-5 z-50">
+      <img src="images/linetop.svg" alt="">
+      <Socials />
+
+    </div>
+     
+    )
+  }
   <Header />
   <main id="main-content">
-    <section id="hero">
-      <h1>Mingalaba</h1>
-      <a
-        target="_blank"
-        href="/rss.xml"
-        class="rss-link"
-        aria-label="rss feed"
-        title="RSS Feed"
-      >
-        <svg xmlns="http://www.w3.org/2000/svg" class="rss-icon"
-          ><path
-            d="M19 20.001C19 11.729 12.271 5 4 5v2c7.168 0 13 5.832 13 13.001h2z"
-          ></path><path
-            d="M12 20.001h2C14 14.486 9.514 10 4 10v2c4.411 0 8 3.589 8 8.001z"
-          ></path><circle cx="6" cy="18" r="2"></circle>
-        </svg>
-      </a>
-
-      <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
-      </p>
-      <p>
-        Read the blog posts or check
-        <LinkButton
-          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://github.com/satnaing/astro-paper#readme"
-        >
-          README
-        </LinkButton> for more info.
-      </p>
-      {
-        // only display if at least one social link is enabled
-        socialCount > 0 && (
-          <div class="social-wrapper">
-            <div class="social-links">Social Links:</div>
-            <Socials />
-          </div>
-        )
-      }
-    </section>
-
-    <Hr />
-
+    <Hero></Hero>
+   
     {
       featuredPosts.length > 0 && (
         <>
-          <section id="featured">
-            <h2>Featured</h2>
-            <ul>
+          <section id="featured" class="">
+            <div class="flex ">
+              <span class="text-[19px]"> <a class="text-[#6FCF97]">~/</a> projects</span>
+	            <img width="100px" height="300px" src="images/Line.svg" ><img/>
+	            <a class="mt-2 ml-2" href="/posts"><img src="/images/View all.svg" alt="">  </a>    
+            </div>
               {featuredPosts.map(({ data }) => (
                 <Card
                   href={`/posts/${slugify(data)}`}
@@ -81,9 +52,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
                   secHeading={false}
                 />
               ))}
-            </ul>
           </section>
-          <Hr />
         </>
       )
     }
