--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import LinkButton from "./LinkButton.astro";
 import logoSVG from "/images/logo.svg";
 
 export interface Props {
-  activeNav?: "posts" | "skils" | "about" | "search";
+  activeNav?: "projects" | "skils" | "about" | "search";
 }
 
 const { activeNav } = Astro.props;
@@ -20,7 +20,7 @@ const { activeNav } = Astro.props;
         {
           LOGO_IMAGE.enable ? (
             <img
-              src={LOGO_IMAGE.svg ? logoSVG : logoPNG}
+              src={LOGO_IMAGE.svg ? logoSVG:logoSVG}
               alt="AstroPaper Logo"
               width={LOGO_IMAGE.width}
               height={LOGO_IMAGE.height}
@@ -45,7 +45,7 @@ const { activeNav } = Astro.props;
         </button>
         <ul id="menu-items" class="display-none sm:flex">
           <li>
-            <a href="/posts" class={activeNav === "posts" ? "active" : ""}>
+            <a href="/projects" class={activeNav === "projects" ? "active" : ""}>
             <span class="text-[#D90416]">~/</span>Projects
             </a>
           </li>
@@ -108,7 +108,7 @@ const { activeNav } = Astro.props;
     @apply absolute -top-full left-16 z-50 bg-skin-accent py-2 px-3 text-skin-inverted transition-all focus:top-4;
   }
   .nav-container {
-    @apply mx-auto flex max-w-3xl flex-col items-center justify-between sm:flex-row;
+    @apply mx-auto flex max-w-3xl flex-col items-center justify-between sm:flex-row max-w-[75rem];
   }
   .top-nav-wrap {
     @apply relative flex w-full items-start justify-between p-4 sm:items-center sm:py-8;
