--- a/src/pages/skils/index.astro
+++ b/src/pages/skils/index.astro
@@ -15,7 +15,7 @@ let tags = getUniqueTags(posts);
 
 <Layout title={`Tags | ${SITE.title}`}>
   <Header activeNav="skils" />
-  <Main pageTitle="Tags" pageDesc="All the tags used in posts.">
+  <Main pageTitle="Tags" pageDesc="All the skils i have from my projects.">
     <ul>
       {tags.map(tag => <Tag name={tag} size="lg" />)}
     </ul>
