--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,9 +41,10 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         <>
           <section id="featured" class="sm: max-w-[72rem]" >
             <div class="flex ">
-              <span class="text-[19px]"> <a class="text-[#6FCF97]">~/</a> projects</span>
-	            <img width="100px" height="300px" src="images/Line.svg" ><img/>
-	            <a class="mt-2 ml-2" href="/posts"><img src="/images/View all.svg" alt="">  </a>    
+              <span class="text-[19px] sm:text-[30px]"> <a class="text-[#6FCF97]">~/</a> projects</span>
+	            <img class="sm:hidden" width="100px" height="300px" src="images/Line.svg" ><img/>
+	            <img  src="images/LineBig.svg" ><img/>
+	            <a class="mt-2 ml-2 sm:mt-3 sm:ml-200" href="/posts"><img src="/images/View all.svg" alt="">  </a>    
             </div>
             <ul class="sm:grid grid-cols-3 gap-[10rem]">
               {featuredPosts.map(({ data }) => (
@@ -60,14 +61,18 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     }
 
     <section id="recent-posts" class="sm: max-w-[72rem]">
-      <h2>Recent Posts</h2>
+      <div class="flex ">
+              <span class="text-[19px]"> <a class="text-[#6FCF97]">~/</a> projects</span>
+	            <img width="100px" height="300px" src="images/Line.svg" ><img/>
+	            <a class="mt-2 ml-2" href="/posts"><img src="/images/View all.svg" alt="">  </a>    
+      </div>
       <ul class="sm:grid grid-cols-3 gap-[10rem]">
         {
           sortedPosts.map(
             ({ data }, index) =>
               index < 3 && (
                 <Card
-                  href={`/posts/${slugify(data)}`}
+                  href={`/projects/${slugify(data)}`}
                   frontmatter={data}
                   secHeading={false}
                 />
