--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@
         <p class="font-code sm: text-[20px] mt-3">I like to create cool stuff and i like putting it on the internet....</p>
     </div>
     <div class="grid grid-cols-2 mt-10 ml-4 sm:ml-0">
-        <button class="border-[1px]	border-[#6FCF97] h-[37px] w-[148px] font-code">Contact me!!</button>
+        <a href="#Conact-me"><button class="border-[1px]	border-[#6FCF97] h-[37px] w-[148px] font-code">Contact me!!</button></a>
         <img class="sm:absolute sm:-mt-60 sm:ml-[50rem]" src="/images/icon.svg" alt="">
     </div>
     <div class="mt-8">
