--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,8 +42,8 @@ const socialCount = SOCIALS.filter(social => social.active).length;
           <section id="featured" class="sm:max-w-[72rem]" >
             <div class="flex ">
               <span class="text-[19px] sm:text-[30px]"> <a class="text-[#6FCF97]">~/</a>projects </span>
-	            <img class="sm:hidden" width="100px" height="300px" src="images/Line.svg" ><img/>
-	            <img class="absolute left-200% invisible sm:visible sm:relative" src="images/LineBig.svg" ><img/>
+	            <img class="sm:hidden ml-3" width="100px" height="300px" src="images/Line.svg" ><img/>
+	            <img class="absolute left-200% invisible sm:visible sm:relative sm:ml-5" src="images/LineBig.svg" ><img/>
               <a class="mt-2 ml-2 sm:mt-3 sm:ml-200" href="/posts"><img src="/images/View all.svg" alt="">  </a>    
             </div>
             <ul class="sm:grid grid-cols-3 gap-[10rem]">
@@ -63,8 +63,8 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     <section id="About-me" class="sm:max-w-[72rem]">
       <div class="flex ">
               <span class="text-[19px] sm:text-[30px]"> <a class="text-[#6FCF97]">~/</a>About-me </span>
-	            <img class="sm:hidden" width="100px" height="300px" src="images/Line.svg" ><img/>
-	            <img class="absolute left-200% invisible sm:visible sm:relative" src="images/LineBig.svg" ><img/>
+	            <img class="sm:hidden ml-3" width="100px" height="300px" src="images/Line.svg" ><img/>
+	            <img class="absolute left-200% invisible sm:visible sm:relative sm:ml-5" src="images/LineBig.svg" ><img/>
       </div>
       <p class="mt-5">I'm Hanan, a software development student at ITU, and also the founder of Elusive and UAI. <br>My goal is to use my software skills to develop innovative solutions for modern problems. <br> I am passionate about working at the intersection of technology and business.</p>
       <a href="/about"><button class="border-[1px]	border-[#6FCF97] h-[37px] w-[148px] mt-10 font-code sm:w-[200px]">Read more</button></a>
@@ -73,8 +73,8 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     <section id="Conact-me" class="sm:max-w-[72rem] sm:h-[30rem]">
       <div class="flex ">
               <span class="text-[19px] sm:text-[30px]"> <a class="text-[#6FCF97]">~/</a>Conact </span>
-	            <img class="sm:hidden" width="100px" height="300px" src="images/Line.svg" ><img/>
-	            <img class="absolute left-200% invisible sm:visible sm:relative" src="images/LineBig.svg" ><img/>
+	            <img class="sm:hidden ml-3" width="100px" height="300px" src="images/Line.svg" ><img/>
+	            <img class="absolute left-200% invisible sm:visible sm:relative sm:ml-5" src="images/LineBig.svg" ><img/>
       </div>
       <p class="sm:absolute sm:mt-32 sm:w-[500px] ">I’m interested in freelance opportunities or part time work. However, if you have other request or question, don’t hesitate to contact me</p>
       <div class="border-[1px] h-32	border-[#6FCF97] sm:w-[185px] sm:h-[141px] sm:absolute sm:ml-[40rem] sm:mt-[5rem] text-center">
