--- a/src/pages/skils/index.astro
+++ b/src/pages/skils/index.astro
@@ -13,7 +13,7 @@ const posts = await getCollection("blog");
 let tags = getUniqueTags(posts);
 ---
 
-<Layout title={`Tags | ${SITE.title}`}>
+<Layout title={`Skils | ${SITE.title}`}>
   <Header activeNav="skils" />
   <Main pageTitle="Tags" pageDesc="All the skils i have from my projects.">
     <ul>
