--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -43,7 +43,7 @@ breadcrumbList[0] === "posts" &&
 
 <style>
   .breadcrumb {
-    @apply mx-auto mt-8 mb-1 w-full max-w-3xl px-4;
+    @apply sm:ml-72 mx-auto mt-8 mb-1 w-full max-w-3xl px-4;
   }
   .breadcrumb ul li {
     @apply inline;
