--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
               <span class="text-[19px] sm:text-[30px]"> <a class="text-[#6FCF97]">~/</a>projects </span>
 	            <img class="sm:hidden ml-3" width="100px" height="300px" src="images/Line.svg" ><img/>
 	            <img class="absolute left-200% invisible sm:visible sm:relative sm:ml-5" src="images/LineBig.svg" ><img/>
-              <a class="mt-2 ml-2 sm:mt-3 sm:ml-200" href="/posts"><img src="/images/View all.svg" alt="">  </a>    
+              <a class="mt-2 ml-2 sm:mt-3 sm:ml-200" href="/projects"><img src="/images/View all.svg" alt="">  </a>    
             </div>
             <ul class="sm:grid grid-cols-3 gap-[10rem]">
               {featuredPosts.map(({ data }) => (
