--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,6 +5,8 @@ import LinkButton from "./LinkButton.astro";
 
 import logoSVG from "/images/logo.svg";
 import logoSVG_dark from "/images/logo-dark.svg";
+import 'animate.css';
+
 
 export interface Props {
   activeNav?: "projects" | "skils" | "about" | "search";
