--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@
     <div class="mt-8">
         <img class="absolute ml-2 z-[-1]" src="/images/Dots.svg" alt="">
 
-        <div class="absolute w-[328px] h-[106px] bg-[#D9B95B] ml-12 mt-7  z-10 sm:w-[640px] animate__animated animate__backInLeft">
+        <div class="absolute w-[328px] h-[106px] bg-[#D9B95B] ml-12 mt-7  z-10 sm:w-[640px]">
             <p class="absolute mt-4 font-code text-[#fff] text-[20px] w-[271px] z-10 ml-8 sm:text-[24px] sm:w-[100%] sm:mt-8">“Dreams come true when you don’t sleep.”</p>
         </div>
         <img class="absolute left-20 mt-3 z-10 sm:left-[400px]" src="/images/qute.svg" alt="">
