--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,7 +72,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
     <section id="Conact-me" class="sm:max-w-[72rem] sm:h-[30rem]">
       <div class="flex ">
-              <span class="text-[19px] sm:text-[30px]"> <a class="text-[#6FCF97]">~/</a>Conact </span>
+              <span class="text-[19px] sm:text-[30px]"> <a class="text-[#6FCF97]">~/</a>Contact </span>
 	            <img class="sm:hidden ml-3" width="100px" height="300px" src="images/Line.svg" ><img/>
 	            <img class="absolute left-200% invisible sm:visible sm:relative sm:ml-5" src="images/LineBig.svg" ><img/>
       </div>
