--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 	            <img class="sm:hidden ml-3" width="100px" height="300px" src="images/Line.svg" ><img/>
 	            <img class="absolute left-200% invisible sm:visible sm:relative sm:ml-5" src="images/LineBig.svg" ><img/>
       </div>
-      <p class="mt-5">I'm Hanan, a software development student at ITU, and also the founder of Elusive and UAI. <br>My goal is to use my software skills to develop innovative solutions for modern problems. <br> I am passionate about working at the intersection of technology and business.</p>
+      <p class="mt-5 sm:text-[20px]">I'm Hanan, a software development student at ITU, and also the founder of Elusive and UAI. <br>My goal is to use my software skills to develop innovative solutions for modern problems. <br> I am passionate about working at the intersection of technology and business.</p>
       <a href="/about"><button class="border-[1px]	border-[#6FCF97] h-[37px] w-[148px] mt-10 font-code sm:w-[200px]">Read more</button></a>
     </section>
 
@@ -76,7 +76,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 	            <img class="sm:hidden ml-3" width="100px" height="300px" src="images/Line.svg" ><img/>
 	            <img class="absolute left-200% invisible sm:visible sm:relative sm:ml-5" src="images/LineBig.svg" ><img/>
       </div>
-      <p class="sm:absolute sm:mt-32 sm:w-[500px] ">I’m interested in freelance opportunities or part time work. However, if you have other request or question, don’t hesitate to contact me</p>
+      <p class="sm:absolute sm:mt-32 sm:w-[500px] sm:text-[20px]">I’m interested in freelance opportunities or part time work. However, if you have other request or question, don’t hesitate to contact me</p>
       <div class="border-[1px] h-32	border-[#6FCF97] sm:w-[185px] sm:h-[141px] sm:absolute sm:ml-[40rem] sm:mt-[5rem] text-center">
         <p class="text">Contact me here</p>  
         <a class="absolute mt-10 -ml-[3.5rem]" href="mailto:hanan@uai.dk" class="text-blue-500 hover:underline">hanan@uai.dk</a>
