--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import { SITE } from "@config";
 import "../styles/base.css";
+import { Analytics } from '@vercel/analytics/react';
 
 const googleSiteVerification = import.meta.env.PUBLIC_GOOGLE_SITE_VERIFICATION;
 
@@ -73,6 +74,7 @@ const socialImageURL = new URL(
         />
       )
     }
+    <Analytics />
 
     <script is:inline src="/toggle-theme.js"></script>
   </head>
