--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,10 +1,10 @@
 <section id="hero" class="mt-20 mb-60 sm: max-w-[72rem]" >
     
-    <div class="ml-10 w-[330px] h[139] sm:w-[550px] sm:ml-0">
+    <div class="ml-10 w-[330px] h[139] sm:w-[550px] sm:ml-20 md:ml-0">
         <h2 class="font-bold text-[23px] font-code sm:text-[32px]">Hi i am Hanan a <span class="text-[#D90416]">student</span>  and <span class="text-[#D90416]">entrepreneur</span></h2>
         <p class="font-code sm: text-[20px] mt-3">I like to create cool stuff and i like putting it on the internet....</p>
     </div>
-    <div class="grid grid-cols-2 mt-10 ml-4 sm:ml-0">
+    <div class="grid grid-cols-2 mt-10 ml-4 sm:ml-20 md:ml-0">
         <a href="#Conact-me"><button class="border-[1px]	border-[#6FCF97] h-[37px] w-[148px] font-code">Contact me!!</button></a>
         <img class="sm:absolute sm:-mt-60 sm:ml-[50rem]" src="/images/icon.svg" alt="">
     </div>
