change to image

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@
     </div>
     <div class="grid grid-cols-2 mt-10 ml-4 sm:ml-20 md:ml-0">
         <a href="#Conact-me"><button class="border-[1px]	border-[#6FCF97] h-[37px] w-[148px] font-code">Contact me!!</button></a>
-        <img class="sm:absolute sm:-mt-60 sm:ml-[50rem]" src="/images/icon.svg" alt="">
+        <img class="sm:absolute sm:-mt-60 sm:ml-[50rem] w-[400px]" src="/images/hanan.png" alt="">
     </div>
     <div class="mt-8">
         <img class="absolute ml-2 z-[-1]" src="/images/Dots.svg" alt="">
