--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,5 +1,6 @@
 ---
 import Breadcrumbs from "@components/Breadcrumbs.astro";
+import "../styles/base.css";
 
 export interface Props {
   pageTitle: string;
@@ -17,6 +18,8 @@ const { pageTitle, pageDesc } = Astro.props;
 </main>
 
 <style>
+      @reference "../styles/base.css";
+
   #main-content {
     @apply sm:max-w-[72rem] mx-auto w-full max-w-3xl px-4 pb-12;
   }
