--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -5,6 +5,7 @@ import Footer from "@components/Footer.astro";
 import Tag from "@components/Tag.astro";
 import Datetime from "@components/Datetime";
 import type { CollectionEntry } from "astro:content";
+import "../styles/base.css";
 
 export interface Props {
   post: CollectionEntry<"blog">;
@@ -49,6 +50,8 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
 </Layout>
 
 <style>
+      @reference "../styles/base.css";
+
   main {
     @apply mx-auto w-full max-w-3xl px-4 pb-12;
   }
