--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -8,6 +8,7 @@ import Card from "@components/Card";
 import LinkButton from "@components/LinkButton.astro";
 import slugify from "@utils/slugify";
 import type { CollectionEntry } from "astro:content";
+import "../styles/base.css";
 
 export interface Props {
   pageNum: number;
@@ -24,7 +25,7 @@ const next = pageNum < totalPages ? "" : "disabled";
 <Layout title={`Projects | ${SITE.title}`}>
   <Header activeNav="projects" />
   <Main pageTitle="Projects" pageDesc="All the articles I've posted.">
-      <ul class="sm:grid grid-cols-3 gap-[10rem] ">
+      <ul class="mt-12 grid gap-8 sm:grid-cols-2 xl:grid-cols-3">
         {
           posts.map(({ data }) => (
             <Card href={`/projects/${slugify(data)}`} frontmatter={data} />
@@ -65,6 +66,8 @@ const next = pageNum < totalPages ? "" : "disabled";
 </Layout>
 
 <style>
+      @reference "../styles/base.css";
+
   .pagination-wrapper {
     @apply mt-auto mb-8 flex justify-center;
   }
