--- a/src/pages/skils/[tag].astro
+++ b/src/pages/skils/[tag].astro
@@ -41,7 +41,7 @@ const tagPosts = getPostsByTag(posts, tag);
     pageTitle={`Tag:${tag}`}
     pageDesc={`All the articles with the skil "${tag}".`}
   >
-    <ul>
+    <ul class="mt-10 grid gap-8 sm:grid-cols-2 xl:grid-cols-3">
       {
         tagPosts.map(({ data }) => (
           <Card href={`/projects/${slugify(data)}`} frontmatter={data} />
